tests/types/errors/assign_handle_foreign_type.mog

const counter = @import("counter")

const source handle<counter:CounterHandle> = counter.create(1i64)
const bad handle<math:CounterHandle> = source
